my-vpc-202401291026.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: My VPC Configuration

Parameters:
  MyIPAddress:
    Type: String
    Description: This must be a check your pc valid Public IP address.
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/32
    ConstraintDescription: must be a valid IP address of the form x.x.x.x/32
    Default: "0.0.0.0/32"
  KeyPairName:
    Type: String
    Default: control-machine
    Description: The key pair used to access the instance.
  VpcCidr:
    Type: String
    Description: VPC CIDR
    Default: "172.20.0.0/16"
  AvailabilityZoneA:
    Type: String
    Description: AvailabilityZone A
    Default: "eu-west-1a"
  AvailabilityZoneC:
    Type: String
    Description: AvailabilityZone C
    Default: "eu-west-1c"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: wm-Three-tier-app-VPC
  
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.20.1.0/24
      AvailabilityZone: !Ref AvailabilityZoneA
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: wm-pub-sub-1a
  PublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.20.2.0/24
      AvailabilityZone: !Ref AvailabilityZoneC
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: wm-pub-sub-2c
  PrivateSubnetWebA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.20.3.0/24
      AvailabilityZone: !Ref AvailabilityZoneA
      Tags:
        - Key: Name
          Value: wm-pri-sub-3a
  PrivateSubnetWebC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.20.4.0/24
      AvailabilityZone: !Ref AvailabilityZoneC
      Tags:
        - Key: Name
          Value: wm-pri-sub-4c
  PrivateSubnetAppA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.20.5.0/24
      AvailabilityZone: !Ref AvailabilityZoneA
      Tags:
        - Key: Name
          Value: wm-pri-sub-5a
  PrivateSubnetAppC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.20.6.0/24
      AvailabilityZone: !Ref AvailabilityZoneC
      Tags:
        - Key: Name
          Value: wm-pri-sub-6c
  PrivateSubnetDbA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.20.7.0/24
      AvailabilityZone: !Ref AvailabilityZoneA
      Tags:
        - Key: Name
          Value: wm-pri-sub-7a
  PrivateSubnetDbC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.20.8.0/24
      AvailabilityZone: !Ref AvailabilityZoneC
      Tags:
        - Key: Name
          Value: wm-pri-sub-8c

  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: wm-IGW-three-tier-app
  Attachigw:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC
  
  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: wm-nat-eip
  NGW:
    Type: AWS::EC2::NatGateway
    DependsOn: Attachigw
    Properties:
      AllocationId: !GetAtt EIP.AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags:
        - Key: Name
          Value: wm-NAT-GW-three-tier-app

  PublicRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: wm-pub-RT
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: Attachigw
    Properties:
      RouteTableId: !Ref PublicRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
  PublicSubnetARTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRT
      SubnetId: !Ref PublicSubnetA
  PublicSubnetCRTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRT
      SubnetId: !Ref PublicSubnetC

  PrivateRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: wm-pri-RT
  PrivateRoute:
    Type: AWS::EC2::Route
    DependsOn: Attachigw
    Properties:
      RouteTableId: !Ref PrivateRT
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NGW
  PrivateSubnetWebARTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRT
      SubnetId: !Ref PrivateSubnetWebA
  PrivateSubnetWebCRTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRT
      SubnetId: !Ref PrivateSubnetWebC
  PrivateSubnetAppARTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRT
      SubnetId: !Ref PrivateSubnetAppA
  PrivateSubnetAppCRTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRT
      SubnetId: !Ref PrivateSubnetAppC
  PrivateSubnetDbARTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRT
      SubnetId: !Ref PrivateSubnetDbA
  PrivateSubnetDbCRTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRT
      SubnetId: !Ref PrivateSubnetDbC

  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access via port 80 and SSH access via port 22
      GroupName: "Public subnet Security Group"
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        ToPort: 80
        FromPort: 80
        CidrIp: !Ref MyIPAddress
      - IpProtocol: tcp
        ToPort: 22
        FromPort: 22
        CidrIp: !Ref MyIPAddress
      Tags:
        - Key: Name
          Value: wm-bastion-jump-server-sg
  ALBFrontendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP/HTTPS access via port 80 and 443 access
      GroupName: "ALB frontend subnet Security Group"
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        ToPort: 80
        FromPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        ToPort: 443
        FromPort: 443
        CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: wm-ALB-frontend-sg
  ALBBackendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP/HTTPS access via port 80 and 443 access
      GroupName: "ALB backend subnet Security Group"
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        ToPort: 80
        FromPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        ToPort: 443
        FromPort: 443
        CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: wm-ALB-backend-sg
  BackendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: 
      - ALBBackendSecurityGroup
      - BastionSecurityGroup
    Properties:
      GroupDescription: Enable HTTP access via port 80 and SSH access via port 22
      GroupName: "Backend subnet Security Group"
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        ToPort: 80
        FromPort: 80
        SourceSecurityGroupId: !Ref ALBBackendSecurityGroup
      - IpProtocol: tcp
        ToPort: 22
        FromPort: 22
        SourceSecurityGroupId: !Ref BastionSecurityGroup
      Tags:
        - Key: Name
          Value: wm-backend-sg
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn:
      - BackendSecurityGroup
    Properties:
      GroupDescription: Enable MySQL access via port 3306
      GroupName: "RDS subnet Security Group"
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        ToPort: 3306
        FromPort: 3306
        SourceSecurityGroupId: !Ref BackendSecurityGroup
      Tags:
        - Key: Name
          Value: wm-book-rds-sg

  RDSSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: wm-book-rds-db-subnet
      DBSubnetGroupName: wm-book-rds-db-subnet
      SubnetIds:
        - !Ref PrivateSubnetDbA
        - !Ref PrivateSubnetDbC
      Tags:
        - Key: Name
          Value: wm-book-rds-db-subnet

#   # ImportedKeyPair:
#   #   Type: AWS::EC2::KeyPair
#   #   Properties:
#   #     KeyName: ec2-user17
#   #     PublicKeyMaterial: ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDMLZOe/nhncMSdjSIiMud1P2BLxgzGvopj7cCBZ1A/swCGlgE4eyLp+t1KiPNKBZpSj/pd6qEbfupCXZNz4xEnlAVxrb5FWe4UtefTH5vB3U9Lw7NL8YgpExpbXC3hXgle8PYIdWl2urhe4Sfx4LH1sFKdaud28ZLNXHh5yfny7cMxAQhH5p8gxNZQ9mYVAmuVKrXW7h8h6uBqiREVFgBsyDtVMG7PyCI9N07iXwAj+bg/C+le0Jn7SKXpbp1pz2Jns+ZwyHQGbEryKF0OcIeYfYzkC1jo70W6l4UZ7VYv/lxvW1K+yhGnkhIlrdzdzhadZzkTu1BGt7ctqYxsxngz
#   BastionHostInstance:
#     Type: AWS::EC2::Instance
#     DependsOn: 
#     - PublicSubnetA
#     - BastionSecurityGroup
#     Properties:
#       ImageId: ami-0f5d6de5da0f4ec33
#       InstanceType: t2.micro
#       KeyName: !Ref KeyPairName
#       SubnetId: !Ref PublicSubnetA
#       SecurityGroupIds:
#         - !Ref BastionSecurityGroup
#       Tags:
#         - Key: Name
#           Value: my-bastion-host-17

# Outputs:
#   PublicIp:
#     Value:
#       Fn::GetAtt:
#         - BastionHostInstance
#         - PublicIp
#     Description: Bastion host Ip Address
